# Gateway-Protocol

./: CMakeLists.txt  README.md
20_GatewayStart/myCode/: CCanPort.cpp  CCanPort.h  CGateway.cpp  CGateway.h  CPort.cpp  CPort.h  CPortFactory.cpp  CPortFactory.h  CRingBuffer.cpp  CRingBuffer.h  CUartPort.cpp  CUartPort.h  CentralErrorHandler.cpp  CentralErrorHandler.h  global.h  main.cpp
